2012-11-01  6.8.0-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.0-4, SVN revision 9832.

2012-10-31  6.8.0-4 Cristy  <quetzlzacatenango@image...>
  * PFM images are grayscale, not sRGB (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22178).
  * Keep YCbCR JPEG compressed TIFF images in the YCbCr colorspace (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22148).

2012-10-27  6.7.9-4 Glenn Randers-Pehrson <glennrp@image...>
  * Don't write sRGB chunk if image->gamma isn't close to (1/2.2), i.e.,
    (0.45 <= gamma <= 0.46) (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22139).

2012-10-25  6.8.0-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.0-3, SVN revision 9783.

2012-10-21  6.8.0-3 Cristy  <quetzlzacatenango@image...>
  * TIFF positional information must be positive (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22106).
  * Set the compression quality for the Webp image format.

2012-10-21  6.8.0-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.0-2, SVN revision 9738.

2012-10-20  6.8.0-2 Cristy  <quetzlzacatenango@image...>
  * Wait for more bytes if the number of returned bytes is less than
    requested in ReadBlob().
  * Prefer fullname property for font, if it exists, otherwise famly + style.

2012-10-17  6.8.0-2 Anthony Thyssen <A.Thyssen@griffith...>
  * Added LanczosRadius filter, that blurs an EWA Lanczos to a integer
    support size. Equivalent to Lanczos in tensor resize case.

2012-10-16  6.8.0-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.0-1, SVN revision 9632.

2012-10-12  6.8.0-1 Cristy  <quetzlzacatenango@image...>
  * Fix color management for the -solarize option (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22059).
  * Some colormap unit tests failed for a quantum depth of 32 (problem
    report from Glenn Randers-Pehrson).
